--- a/src/styles/Background.scss
+++ b/src/styles/Background.scss
@@ -1,3 +1,5 @@
+$banner: rgba(0, 0, 0, 0.1);
+
 .hero {
   height: 100vh;
   width: 100%;
@@ -6,19 +8,23 @@
   .content {
     text-align: right;
     position: absolute;
-    margin: auto;
+    // margin: auto;
     width: 100%;
     height: 100%;
     top: 20vh;
+    background: $banner;
 
-    @media screen and (max-width: 640px) {
+    @media screen and (max-width: 650px) {
       h1 {
         font-size: 3rem;
+        background: $banner;
       }
 
       p {
         font-size: 1.4rem;
+        margin-left: 5rem;
         margin-bottom: 1.6rem;
+        background: $banner;
       }
     }
   }
@@ -40,8 +46,8 @@
   }
 
   .buttons {
-    margin-top: 10rem;
-    margin-right: 6rem;
+    margin-top: 8rem;
+    margin-right: 4rem;
   }
 
   .btn {
@@ -51,6 +57,10 @@
     :hover {
       background-color: rgba(237, 94, 148, 0.9);
       transition: ease-in linear 300;
+    }
+
+    @media screen and (max-width: 650px) {
+      padding: 10px 10px;
     }
   }
 }
@@ -64,6 +74,12 @@
   justify-content: space-between;
   padding: 10px 0 10px 10px;
   z-index: 2;
+
+  @media screen and (max-width: 640px) {
+    flex-direction: row;
+    top: 0;
+    padding: 5px 5px 5px 0px;
+  }
 }
 
 #image {
